# Hemera

./: CMakeLists.txt  README.md  activation_function.h  main.cpp  matrix.h
.kdev4/: Hemera.kdev4
prototype/: CMakeLists.txt  activation_function.h  main.cpp  network.cpp  network.h  network_pre.h  prototype.kdev4  prototype.sln  prototype.vcxproj  sample.cpp
prototype/.kdev4/: prototype.kdev4
prototype/Debug/: prototype.ilk  vc140.idb
prototype/Debug/prototype.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  prototype.lastbuildstate
rnn/: .network.h.swp  CMakeLists.txt  main.cpp  network.cpp  network.h  rnn.kdev4  ulti.cpp  ulti.h  weights.cpp  weights.h
rnn/.kdev4/: rnn.kdev4
test/: a.out  rnn.py  test.cpp  test.txt  test_data_generate.py
